plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.12'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.spotbugs' version '6.0.7'
    id 'pmd'
    id 'checkstyle'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.imyme'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Spotbugs
spotbugs {
    toolVersion = '4.8.3'
    effort = 'max'
    reportLevel = 'low'
    ignoreFailures = true  // MVP 단계에서는 경고만
}

spotbugsMain {
    reports {
        html.required = true
        xml.required = false
    }
}

// PMD - 정적 코드 분석
pmd {
    toolVersion = '6.55.0'
    ruleSets = []
    ruleSetFiles = files("config/pmd/pmd-rules.xml")
    ignoreFailures = true  // 경고만
}

pmdMain {
    reports {
        html.required = true
        xml.required = false
    }
}

// CheckStyle - 코드 스타일 검사
checkstyle {
    toolVersion = '10.12.3'
    configFile = file("config/checkstyle/checkstyle.xml")
    ignoreFailures = true  // 경고만
}

checkstyleMain {
    reports {
        html.required = true
        xml.required = false
    }
}
